# charm

./: .gitmodules  LICENSE.md  README.md  TODO.md  compile_flags.txt  meson.build
charm-cli/: main.cpp  meson.build
libcharm/: meson.build
libcharm/include/libcharm/: arm.hpp  emulator.hpp  recomp.hpp  thumb.hpp
libcharm/src/: arm.cpp  emulator.cpp  recomp.cpp  recomp_analysis.cpp  recomp_emit.cpp
liblayer/: meson.build
liblayer/include/liblayer/: armv4.cpp  armv4t_arm.cpp  conditions.hpp  liblayer.hpp  memory.cpp
